# fdtd-solver

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.h.in  generate-test-registry.py  generate_test_registry.py
cmake/: FindCMocka.cmake
include/rvlm/fdtd/common/: common_helpers.h  common_helpers_internal.h  common_typedefs.h  cross_compiler.h  error_handling.h  internal_macros.h  memory_allocation.h  netcdf_helpers.h  problem_formulation.h  problem_formulation_netcdf.h  simulation_parameters.h  simulation_parameters_reader.h  string_format.h
src/common/: common_helpers.c  common_helpers_internal.h  common_typedefs.h  error_handling.c  error_handling.h  memory_allocation.c  memory_allocation.h  netcdf_helpers.c  problem_formulation.c  problem_formulation_netcdf.c  simulation_parameters.h  simulation_parameters_enums.h  simulation_parameters_reader.c  simulation_parameters_reader.h  string_format.c
src/opencl/: main.c
test/: main_cmocka.c  main_cunit.c  test_config.h.in
test/_data/: yee_lattice_1x2x2.ncdl  yee_lattice_1x2x3.ncdl
test/common/: test_common_helpers.c  test_error_handling.c  test_internal_macros.c  test_problem_formulation_netcdf.c  test_resource_generation.c  test_string_format.c
tools/: generate_resource_file.py
